# geopolitical-conflict-ml-temporal-shift

./: .gitignore  CITATION.cff  PROJECT_CHARTER.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md
docs/: DATA_DICTIONARY.md  JOURNAL_SUBMISSION_CHECKLIST.md  METHODOLOGY.md  REPRODUCIBILITY.md
notebooks/: 00_data_audit.ipynb  01_baseline_conflict_prediction_colab.py  01_colab_baseline_conflict_prediction.py  01_preprocessing_and_merge.ipynb  02_baseline_models.ipynb  03_leakage_safe_robustness.ipynb  04_reliability_calibration.ipynb  05_drift_analysis.ipynb  06_explainability_stability.ipynb  07_figures_and_tables.ipynb
outputs/: README.md  error_analysis_best_model.csv  false_alarms.csv  improved_model_auc_pr_results.csv
outputs/tables/: README.md  bootstrap_confidence_intervals.csv  calibration_table_best_model.csv  explainability_coefficients_by_split.csv  improved_model_predictions.csv  improved_model_threshold_results.csv  missed_escalations.csv  peer_review_summary_table.csv
scripts/: make_figures.py  run_all.py  run_drift.py  run_models.py  run_preprocessing.py  run_reliability.py  run_robustness.py
src/: __init__.py  calibration.py  config.py  data_loading.py  drift.py  evaluation.py  explainability.py  features.py  modeling.py  plotting.py  preprocessing.py
tests/: test_features.py  test_metrics.py  test_preprocessing.py
