[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geopolitical-conflict-ml-temporal-shift"
version = "0.1.0"
description = "Reproducibility package for temporal distribution shift in conflict escalation forecasting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Naimur Rahman" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
